--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,12 @@
 .light-theme {
-  background-color: #dbeeff;
+  background-color: #93bbeb;
   color: #1a2c2c;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .light-theme .bodytext{
   border: 5px solid #3283e6;
-  background-color: #93bbeb;
+  background-color: #dbeeff;
   width: 75%;
   padding: 14px;
   margin: 1%;
@@ -19,24 +19,60 @@
 
 .light-theme .sidebar {
   border: 5px solid #3283e6;
-  background-color: #93bbeb;
+  background-color: #dbeeff;
   width: 20%;
-  padding: 10px;
+  padding: 15px;
   margin: 1%;
   box-sizing: border-box;
   float: left;
   display: block;
 }
 
+.light-theme .title { 
+  border: 5px solid #3283e6;
+  background-color: #dbeeff;
+  margin: 15px;
+  display: block;
+  text-align: center;
+}
+
+.light-theme .footer {
+  border: 5px solid #3283e6;
+  background-color: #dbeeff;
+  width: 100%;
+  padding: 4px;
+  margin: auto;
+  margin-top: 10px;
+  box-sizing: border-box;
+  display: block;
+  float: left;
+  text-align: center;
+}
+
 .light-theme .link {
+  color: #327987;
+}
+
+.light-theme strong {
+  font-size: 115%;
+  color: #1a2c2c;
+}
+
+.light-theme em {
+  font-size: 85%;
   color: #1a2c2c;
 }
 
 .light-theme img {
-  border: 5px solid #327987;
-  background-color:#dbeeff;
-  margin: 2%;
+  border: 5px solid #3283e6;
+  background-color: #93bbeb;
+  margin: auto;
   padding: 12px;
+}
+
+.light-theme .img-right {
+  float: right;
+  margin-left: 15px;
 }
 
 .dark-theme {
@@ -62,45 +98,63 @@
   border: 5px solid #327987;
   background-color: #1a2c2c;
   width: 20%;
-  padding: 10px;
+  padding: 15px;
   margin: 1%;
   box-sizing: border-box;
   float: left;
   display: block;
 }
 
-.dark-theme .link {
-  color: #3283e6;
-}
-
-.dark-theme img {
-  border: 5px solid #327987;
-  background-color:#dbeeff;
-  margin: 2%;
-  padding: 12px;
-}
-
-p {
-  font-size: 22px;
-}
-
-strong {
-  font-size: 115%;
-  color: #93bbeb;
-}
-
-em {
-  font-size: 85%;
-  color: #93bbeb;
-}
-
-.title { 
+.dark-theme .title { 
   border: 5px solid #327987;
   background-color: #1a2c2c;
   width: auto;
   margin: 15px;
   display: block;
   text-align: center;
+}
+
+.dark-theme .footer {
+  border: 5px solid #327987;
+  background-color: #1a2c2c;
+  width: 100%;
+  padding: 4px;
+  margin: auto;
+  margin-top: 10px;
+  box-sizing: border-box;
+  display: block;
+  float: left;
+  text-align: center;
+}
+
+.dark-theme .link {
+  color: #3283e6;
+}
+
+.dark-theme strong {
+  font-size: 115%;
+  color: #93bbeb;
+}
+
+.dark-theme em {
+  font-size: 85%;
+  color: #93bbeb;
+}
+
+.dark-theme img {
+  border: 5px solid #327987;
+  background-color:#dbeeff;
+  margin: auto;
+  padding: 12px;
+}
+
+.dark-theme .img-right {
+  float: right;
+  margin-left: 15px;
+}
+
+p {
+  font-size: 22px;
 }
 
 .sidebar h1 {
@@ -114,55 +168,8 @@ em {
   font-weight: 900;
 }
 
-.bodytext {
-  border: 5px solid #327987;
-  background-color: #1a2c2c;
-  width: 75%;
-  padding: 14px;
-  margin: 1%;
-  box-sizing: border-box;
-  display: block;
-  float: right;
-  text-indent: 5%;
-  text-align: justify;
-}
-
 .bodytext h2 {
   font-size: 28px;
-}
-
-.footer {
-  border: 5px solid #327987;
-  background-color: #1a2c2c;
-  width: 100%;
-  padding: 4px;
-  margin: 15px;
-  box-sizing: border-box;
-  display: block;
-  float: left;
-  text-align: center;
-}
-
-img {
-  border: 5px solid #327987;
-  background-color:#dbeeff;
-  margin: auto;
-  padding: 12px;
-}
-
-.img-right {
-  float: right;
-  margin-left: 15px;
-}
-
-.link {
-  color: #3283e6;
-}
-
-body {
-  background-color: black;
-  color: #d2dfef;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .row {
